clap_derive/tests/ui/enum_flatten.stderr
error: `flatten` is usable only with single-typed tuple variants
  --> $DIR/enum_flatten.rs:14:5
   |
14 |     #[clap(flatten)]
   |     ^
